[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Player/Abilities/Fury/Fury.gd" type="Script" id=1]
[ext_resource path="res://assets/Player/Abilities/ScreenTint.gd" type="Script" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Ability"
length = 1.55
step = 0.025
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.375, 0.95, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "ability_start"
}, {
"args": [  ],
"method": "cast"
}, {
"args": [  ],
"method": "ability_end"
} ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 320.0

[node name="Fury" type="Node2D"]
pause_mode = 1
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Ability = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScreenTint" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 1, 1, 0 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
start_color = Color( 1, 0, 0, 0 )
end_color = Color( 1, 0, 0, 0.25 )

[node name="Tween" type="Tween" parent="CanvasLayer/ScreenTint"]

[node name="FormulaHitbox" type="Area2D" parent="."]
monitoring = false
monitorable = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="FormulaHitbox"]
shape = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
